bin_PROGRAMS = MathFinder

MathFinder_SOURCES = EVAL/Evaluator.h \
FIND/MathExpressionFinderMain.h \
TRAIN/TrainerForMathExpressionFinder.h \
EVAL/Top/BipartiteGraph.h \
EVAL/Top/DatasetMetrics.h \
EVAL/Top/MetricsPrinter.h \
FIND/Top/MathFind/MathExpressionFinder.h \
TRAIN/TopLevel/TrainingSample/Sample.h \
FIND/Top/CLI/FinderInfo/FinderInfo.h \
FIND/Top/CLI/MainMenu/MainMenu.h \
FIND/Top/CLI/Usage/Usage.h \
TRAIN/TopLevel/TrainingSample/SampleExtractor/TrainingSampleExtractor.h \
FIND/Top/MathFind/Top/Provider/MFinderProvider.h \
FIND/Top/MathFind/Top/Results/MFinderResults.h \
TRAIN/TopLevel/TrainingSample/FileParsing/GroundtruthFileParser/GTParser.h \
TRAIN/TopLevel/TrainingSample/FileParsing/SampleFileParser/SampleFileParser.h \
FIND/Top/CLI/MainMenu/Top/MenuBase/MenuBase.h \
FIND/Top/MathFind/Top/Comp/Det/Detector.h \
FIND/Top/MathFind/Top/Comp/FeatExt/FeatExt.h \
FIND/Top/MathFind/Top/Comp/Seg/Seg.h \
FIND/Top/CLI/FinderInfo/Top/Comp/Parser/InfoFileParser.h \
FIND/Top/CLI/FinderInfo/Top/Comp/Paths/FinderTrainingPaths.h \
FIND/Top/CLI/MainMenu/Top/Comp/About/AboutMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Eval/EvaluatorMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/FInfo/FinderInfoMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/GtGen/GroundtruthGenMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/TrainingMenu.h \
FIND/Top/CLI/FinderInfo/Top/Comp/Paths/Fac/FTPathsFactory.h \
FIND/Top/MathFind/Top/Comp/Det/Top/Fac/DetFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/BlobFeatExt.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Fac/FeatExtFac.h \
FIND/Top/MathFind/Top/Comp/Seg/Top/Fac/SegFac.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/About/AboutTrainingMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Dataset/DatasetMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Det/DetMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/FeatSelMenuMain.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Name/NameMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Seg/SegMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Train/DoTrainingMenu.h \
FIND/Top/MathFind/Top/Comp/Det/Top/Imp/SvmDet/SvmDetector.h \
FIND/Top/MathFind/Top/Comp/Seg/Top/Imp/HeuristicMerge/HeuristicMerge.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/About/AboutFeatMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/All/AllFeatMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/FeatSelMenuBase.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Rec/RecMenu.h \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Spatial/SpatialMenu.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/AlignedFeatExt.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Cat/GeometryCat.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/NestedFeatExt.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/StackedFeatExt.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Cat/RecCat.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/NGramsFE.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/OtherRec.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/SubSup.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Data/AlignedData.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc/AlignedDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Fac/AlignedFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Data/NestedData.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Desc/NestedDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Fac/NestedFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Data/StackedData.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Desc/StackedDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Fac/StackedFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc/NGDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Fac/NGFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/NGProfile/NGProfile.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc/OtherRecDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Factory/OtherRecFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Data/SubSupData.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc/SubSupDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Fac/SubSupFac.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc/Flag/AlignedFlagDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc/Flag/NGFlagDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc/Flag/OtherRecFlagDesc.h \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc/Flag/SubSupFlagDesc.h \
EVAL/Evaluator.cpp \
FIND/MathExpressionFinderMain.cpp \
TRAIN/TrainerForMathExpressionFinder.cpp \
EVAL/Top/BipartiteGraph.cpp \
FIND/Top/MathFind/MathExpressionFinder.cpp \
TRAIN/TopLevel/TrainingSample/Sample.cpp \
FIND/Top/CLI/FinderInfo/FinderInfo.cpp \
FIND/Top/CLI/MainMenu/MainMenu.cpp \
FIND/Top/CLI/Usage/Usage.cpp \
TRAIN/TopLevel/TrainingSample/SampleExtractor/TrainingSampleExtractor.cpp \
FIND/Top/MathFind/Top/Provider/MFinderProvider.cpp \
FIND/Top/MathFind/Top/Results/MFinderResults.cpp \
TRAIN/TopLevel/TrainingSample/FileParsing/GroundtruthFileParser/GTParser.cpp \
TRAIN/TopLevel/TrainingSample/FileParsing/SampleFileParser/SampleFileParser.cpp \
FIND/Top/CLI/MainMenu/Top/MenuBase/MenuBase.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/FeatExt.cpp \
FIND/Top/CLI/FinderInfo/Top/Comp/Parser/InfoFileParser.cpp \
FIND/Top/CLI/FinderInfo/Top/Comp/Paths/FinderTrainingPaths.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/About/AboutMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Eval/EvaluatorMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/FInfo/FinderInfoMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/GtGen/GroundtruthGenMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/TrainingMenu.cpp \
FIND/Top/CLI/FinderInfo/Top/Comp/Paths/Fac/FTPathsFactory.cpp \
FIND/Top/MathFind/Top/Comp/Det/Top/Fac/DetFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/BlobFeatExt.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Fac/FeatExtFac.cpp \
FIND/Top/MathFind/Top/Comp/Seg/Top/Fac/SegFac.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/About/AboutTrainingMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Dataset/DatasetMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Det/DetMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/FeatSelMenuMain.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Name/NameMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Seg/SegMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Train/DoTrainingMenu.cpp \
FIND/Top/MathFind/Top/Comp/Det/Top/Imp/SvmDet/SvmDetector.cpp \
FIND/Top/MathFind/Top/Comp/Seg/Top/Imp/HeuristicMerge/HeuristicMerge.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/About/AboutFeatMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/All/AllFeatMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/FeatSelMenuBase.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Rec/RecMenu.cpp \
FIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Spatial/SpatialMenu.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/AlignedFeatExt.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Cat/GeometryCat.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/NestedFeatExt.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/StackedFeatEx.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Cat/RecCat.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/NGramsFE.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/OtherRec.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/SubSup.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Data/AlignedData.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc/AlignedDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Fac/AlignedFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Data/NestedData.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Desc/NestedDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Fac/NestedFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Data/StackedData.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Desc/StackedDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Fac/StackedFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc/NGDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Fac/NGFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/NGProfile/NGProfile.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc/OtherRecDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Factory/OtherRecFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc/SubSupDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Fac/SubSupFac.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc/Flag/AlignedFlagDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc/Flag/NGFlagDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc/Flag/OtherRecFlagDesc.cpp \
FIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc/Flag/SubSupFlagDesc.cpp

tesspath=../../THIRDPARTY/Tesseract
commonpath=../COMMON
dlibpath=../../THIRDPARTY/dlib-18.4

MathFinder_CPPFLAGS = -IEVAL \
-IEVAL/Top \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Dataset \
-IFIND/Top/CLI/MainMenu/Top/MenuBase \
-IFIND \
-IFIND/Top/MathFind \
-IFIND/Top/MathFind/Top/Comp/FeatExt \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp \
-IFIND/Top/CLI/FinderInfo \
-IFIND/Top/CLI/FinderInfo/Top/Comp/Paths \
-IFIND/Top/MathFind/Top/Comp/Det \
-ITRAIN/TopLevel/TrainingSample \
-IFIND/Top/MathFind/Top/Comp/Seg \
-IFIND/Top/MathFind/Top/Results \
-IFIND/Top/MathFind/Top/Provider \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Cat \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Cat \
-IFIND/Top/CLI/MainMenu \
-IFIND/Top/CLI/Usage \
-IFIND/Top/CLI/FinderInfo/Top/Comp/Parser \
-ITRAIN \
-ITRAIN/TopLevel/TrainingSample/FileParsing/GroundtruthFileParser \
-ITRAIN/TopLevel/TrainingSample/SampleExtractor \
-IFIND/Top/CLI/FinderInfo/Top/Comp/Paths/Fac \
-IFIND/Top/CLI/MainMenu/Top/Comp/About \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Name \
-IFIND/Top/CLI/MainMenu/Top/Comp/FInfo \
-IFIND/Top/CLI/MainMenu/Top/Comp/GtGen \
-IFIND/Top/CLI/MainMenu/Top/Comp/Eval \
-ITRAIN/TopLevel/TrainingSample/FileParsing/SampleFileParser \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/Det/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/Seg/Top/Fac \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/About \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Det \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Seg \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Train \
-IFIND/Top/MathFind/Top/Comp/Det/Top/Imp/SvmDet \
-IFIND/Top/MathFind/Top/Comp/Seg/Top/Imp/HeuristicMerge \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Desc/Flag \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Data \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Data \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Spatial \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/Feat/Rec \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/About \
-IFIND/Top/CLI/MainMenu/Top/Comp/Training/Comp/Feat/All \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Aligned/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Stacked/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Geo/Nested/Top/Data \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Desc/Flag \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Fac \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/Desc/Flag \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Factory \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/Other/Top/Desc/Flag \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/NGrams/Top/NGProfile \
-IFIND/Top/MathFind/Top/Comp/FeatExt/Top/Comp/Imp/Rec/SubSup/Top/Data \
-I/usr/local/include/leptonica \
-I$(commonpath)/GRID \
-I$(commonpath)/GRID/Top/Cell/Comp/Spatial \
-I$(commonpath)/GRID/Top/Cell/Comp/Spatial/Merge \
-I$(commonpath)/GRID/Top/Cell \
-I$(commonpath)/GRID/Top/Cell/Comp/Data \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/DoubleFeat \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/Desc/Desc \
-I$(commonpath)/GRID/Top/Cell/Comp/RecData/Char \
-I$(commonpath)/GRID/Top/Cell/Comp/RecData/Row \
-I$(commonpath)/UTIL \
-I$(commonpath)/GRID/Top/Fac \
-I$(commonpath)/GRID/Top/Cell/Comp/RecData/Block \
-I$(commonpath)/GRID/Top/Cell/Comp/RecData/Word \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/Fac \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/Stopword \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/Desc/Cat \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/Desc/Flag \
-I$(commonpath)/GRID/Top/Cell/Comp/Data/NGram/NGProfile \
-I$(commonpath)/GRID/Top/Cell/Comp/RecData/Block/Sentence \
-I$(tesspath)/api \
-I$(tesspath)/ccmain -I$(tesspath)/ccstruct \
-I$(tesspath)/ccutil -I$(tesspath)/classify \
-I$(tesspath)/config -I$(tesspath)/contrib \
-I$(tesspath)/cube -I$(tesspath)/cutil \
-I$(tesspath)/dict -I$(tesspath)/doc \
-I$(tesspath)/image -I$(tesspath)/java \
-I$(tesspath)/m4 -I$(tesspath)/neural_networks \
-I$(tesspath)/po -I$(tesspath)/tessdata \
-I$(tesspath)/testing -I$(tesspath)/textord \
-I$(tesspath)/training -I$(tesspath)/viewer \
-I$(tesspath)/wordrec -I$(tesspath) \
-I$(dlibpath)

MathFinder_LDADD = /usr/local/lib/liblept.so \
$(tesspath)/api/libtesseract.la \
$(dlibpath)/dlib/libdlib.la \
$(dlibpath)/dlib/threads/libthreads.la \
$(commonpath)/libCOMMON.la

