lib_LTLIBRARIES = libBinaryClassifier.la
libBinaryClassifier_la_SOURCES = IBinaryClassifier.h libSVM.h libSVM.cpp
libBinaryClassifier_la_CPPFLAGS = -I../../dlib-18.4 -I../../Utils \
-I../Sample
libBinaryClassifier_la_LIBADD = ../../dlib-18.4/dlib/threads/libthreads.la \
../../dlib-18.4/dlib/libdlib.la \
../../Utils/libUtils.la
