lib_LTLIBRARIES = libdlib.la
SUBDIRS = any array array2d base64 bayes_utils bigint \
binary_search_tree sockets sockstreambuf \
bsp bit_stream bound_function_pointer bridge \
byte_orderer clustering cmd_line_parser compress_stream \
conditioning_class config_reader cpp_pretty_printer cpp_tokenizer \
crc32 data_io directed_graph dir_nav disjoint_subsets entropy_decoder \
entropy_decoder_model entropy_encoder entropy_encoder_model filtering \
general_hash geometry graph graph_cuts graph_utils threads \
hash_map hash_set hash_table http_client image_keypoint image_loader \
image_processing image_saver image_transforms interfaces iosockstream \
linker logger lsh lz77_buffer lzp_buffer manifold_regularization map \
matrix md5 member_function_pointer memory_manager memory_manager_global \
memory_manager_stateless misc_api mlp numerical_integration opencv \
optimization pipe quantum_computing queue rand reference_counter sequence \
server set set_utils sliding_buffer smart_pointers \
sqlite stack static_map static_set statistics stl_checked string svm \
sync_extension timeout timer tokenizer tuple type_safe_union \
unicode vectorstream xml_parser stack_trace
libdlib_la_SOURCES = algs.h  any.h array.h \
array2d.h assert.h base64.h bayes_utils.h bigint.h binary_search_tree.h \
bit_stream.h bound_function_pointer.h bridge.h bsp.h byte_orderer.h \
clustering.h cmd_line_parser.h compress_stream.h conditioning_class.h \
config.h config_reader.h console_progress_indicator.h \
cpp_pretty_printer.h cpp_tokenizer.h crc32.h data_io.h directed_graph.h \
dir_nav.h disjoint_subsets.h enable_if.h entropy_decoder.h \
entropy_decoder_model.h entropy_encoder.h entropy_encoder_model.h \
error.h filtering.h float_details.h geometry.h graph.h graph_cuts.h \
graph_utils.h graph_utils_threaded.h hash.h \
hash_map.h hash_set.h hash_table.h image_io.h image_keypoint.h \
image_processing.h image_transforms.h iosockstream.h is_kind.h linker.h \
logger.h lsh.h lz77_buffer.h lzp_buffer.h manifold_regularization.h \
map.h matrix.h md5.h member_function_pointer.h memory_manager.h \
memory_manager_global.h memory_manager_stateless.h misc_api.h mlp.h \
noncopyable.h numerical_integration.h numeric_constants.h opencv.h \
optimization.h pipe.h pixel.h platform.h quantum_computing.h queue.h \
rand.h ref.h reference_counter.h revision.h sequence.h serialize.h \
server.h set.h set_utils.h sliding_buffer.h smart_pointers.h \
smart_pointers_thread_safe.h sort.h sockets.h sockstreambuf.h \
sparse_vector.h sqlite.h stack.h \
static_map.h static_set.h statistics.h std_allocator.h stl_checked.h \
string.h svm.h svm_threaded.h sync_extension.h threads.h timeout.h \
timer.h time_this.h timing.h tokenizer.h tuple.h type_safe_union.h \
uintn.h unicode.h unordered_pair.h vectorstream.h windows_magic.h \
xml_parser.h stack_trace.h
libdlib_la_LIBADD = sockets/libsockets.la \
any/libany.la array/libarray.la array2d/libarray2d.la \
base64/libbase64.la bayes_utils/libbayes_utils.la bigint/libbigint.la \
binary_search_tree/libbinary_search_tree.la \
bit_stream/libbit_stream.la bsp/libbsp.la \
bound_function_pointer/libbound_function_pointer.la bridge/libbridge.la \
byte_orderer/libbyte_orderer.la clustering/libclustering.la \
cmd_line_parser/libcmd_line_parser.la compress_stream/libcompress_stream.la \
conditioning_class/libconditioning_class.la \
config_reader/libconfig_reader.la \
threads/libthreads.la \
cpp_pretty_printer/libcpp_pretty_printer.la \
cpp_tokenizer/libcpp_tokenizer.la crc32/libcrc32.la data_io/libdata_io.la \
directed_graph/libdirected_graph.la dir_nav/libdir_nav.la \
disjoint_subsets/libdisjoint_subsets.la \
entropy_decoder/libentropy_decoder.la \
entropy_decoder_model/libentropy_decoder_model.la \
entropy_encoder/libentropy_encoder.la \
entropy_encoder_model/libentropy_encoder_model.la \
filtering/libfiltering.la general_hash/libgeneral_hash.la \
geometry/libgeometry.la graph/libgraph.la graph_cuts/libgraph_cuts.la \
graph_utils/libgraph_utils.la \
hash_map/libhash_map.la \
hash_set/libhash_set.la hash_table/libhash_table.la \
http_client/libhttp_client.la image_keypoint/libimage_keypoint.la \
image_loader/libimage_loader.la image_processing/libimage_processing.la \
image_saver/libimage_saver.la image_transforms/libimage_transforms.la \
interfaces/libinterfaces.la iosockstream/libiosockstream.la \
linker/liblinker.la logger/liblogger.la lsh/liblsh.la \
lz77_buffer/liblz77_buffer.la lzp_buffer/liblzp_buffer.la \
manifold_regularization/libmanifold_regularization.la map/libmap.la \
matrix/libmatrix.la md5/libmd5.la \
member_function_pointer/libmember_function_pointer.la \
memory_manager/libmemory_manager.la \
memory_manager_global/libmemory_manager_global.la \
memory_manager_stateless/libmemory_manager_stateless.la \
misc_api/libmisc_api.la mlp/libmlp.la \
numerical_integration/libnumerical_integration.la opencv/libopencv.la \
optimization/liboptimization.la pipe/libpipe.la \
quantum_computing/libquantum_computing.la queue/libqueue.la \
rand/librand.la reference_counter/libreference_counter.la \
sequence/libsequence.la server/libserver.la set/libset.la \
set_utils/libset_utils.la sliding_buffer/libsliding_buffer.la \
smart_pointers/libsmart_pointers.la sqlite/libsqlite.la \
stack/libstack.la static_map/libstatic_map.la static_set/libstatic_set.la \
statistics/libstatistics.la stl_checked/libstl_checked.la \
string/libstring.la svm/libsvm.la sync_extension/libsync_extension.la \
timeout/libtimeout.la timer/libtimer.la tokenizer/libtokenizer.la \
tuple/libtuple.la type_safe_union/libtype_safe_union.la \
unicode/libunicode.la vectorstream/libvectorstream.la \
xml_parser/libxml_parser.la stack_trace/libstack_trace.la \
/usr/lib64/libpthread.so
