bin_PROGRAMS = assignment_learning_ex bayes_net_ex bayes_net_from_disk_ex \
bayes_net_gui_ex bridge_ex bsp_ex compress_stream_ex config_reader_ex \
custom_trainer_ex dir_nav_ex empirical_kernel_map_ex file_to_code_ex \
graph_labeling_ex gui_api_ex image_ex integrate_function_adapt_simp_ex \
iosockstream_ex kcentroid_ex kkmeans_ex krls_ex krls_filter_ex \
krr_classification_ex krr_regression_ex least_squares_ex \
linear_manifold_regularizer_ex logger_ex logger_ex_2 matrix_ex \
matrix_expressions_ex member_function_pointer_ex mlp_ex \
model_selection_ex multiclass_classification_ex multithreaded_object_ex \
object_detector_advanced_ex object_detector_ex one_class_classifiers_ex \
optimization_ex parallel_for_ex pipe_ex pipe_ex_2 quantum_computing_ex \
queue_ex rank_features_ex running_stats_ex rvm_ex rvm_regression_ex \
sequence_labeler_ex sequence_segmenter_ex server_http_ex \
server_iostream_ex sockets_ex sockstreambuf_ex std_allocator_ex \
surf_ex svm_ex svm_pegasos_ex svm_rank_ex svm_sparse_ex svm_struct_ex \
svr_ex threaded_object_ex thread_function_ex thread_pool_ex threads_ex \
timer_ex train_object_detector using_custom_kernels_ex xml_parser_ex


assignment_learning_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
bayes_net_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
bayes_net_from_disk_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
bayes_net_gui_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
bridge_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
bsp_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
compress_stream_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
config_reader_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
custom_trainer_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
dir_nav_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
empirical_kernel_map_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
file_to_code_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
graph_labeling_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
gui_api_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
image_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
integrate_function_adapt_simp_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
iosockstream_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
kcentroid_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
kkmeans_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
krls_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
krls_filter_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
krr_classification_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
krr_regression_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
least_squares_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
linear_manifold_regularizer_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
logger_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
logger_ex_2_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
matrix_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
matrix_expressions_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
member_function_pointer_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
mlp_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
model_selection_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
multiclass_classification_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
multithreaded_object_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
object_detector_advanced_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
object_detector_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
one_class_classifiers_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
optimization_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
parallel_for_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
pipe_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
pipe_ex_2_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
quantum_computing_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
queue_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
rank_features_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
running_stats_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
rvm_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
rvm_regression_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
sequence_labeler_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
sequence_segmenter_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
server_http_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
server_iostream_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
sockets_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
sockstreambuf_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
std_allocator_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
surf_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svm_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svm_pegasos_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svm_rank_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svm_sparse_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svm_struct_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
svr_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
threaded_object_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
thread_function_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
thread_pool_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
threads_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
timer_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
train_object_detector_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
using_custom_kernels_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so
xml_parser_ex_LDADD = ../dlib/libdlib.la /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so /usr/lib64/libpthread.so

assignment_learning_ex_SOURCES = assignment_learning_ex.cpp
bayes_net_ex_SOURCES = bayes_net_ex.cpp
bayes_net_from_disk_ex_SOURCES = bayes_net_from_disk_ex.cpp
bayes_net_gui_ex_SOURCES = bayes_net_gui_ex.cpp
bridge_ex_SOURCES = bridge_ex.cpp
bsp_ex_SOURCES = bsp_ex.cpp
compress_stream_ex_SOURCES = compress_stream_ex.cpp
config_reader_ex_SOURCES = config_reader_ex.cpp
custom_trainer_ex_SOURCES = custom_trainer_ex.cpp
dir_nav_ex_SOURCES = dir_nav_ex.cpp
empirical_kernel_map_ex_SOURCES = empirical_kernel_map_ex.cpp
file_to_code_ex_SOURCES = file_to_code_ex.cpp
graph_labeling_ex_SOURCES = graph_labeling_ex.cpp
gui_api_ex_SOURCES = gui_api_ex.cpp
image_ex_SOURCES = image_ex.cpp
integrate_function_adapt_simp_ex_SOURCES = \
integrate_function_adapt_simp_ex.cpp
iosockstream_ex_SOURCES = iosockstream_ex.cpp
kcentroid_ex_SOURCES = kcentroid_ex.cpp
kkmeans_ex_SOURCES = kkmeans_ex.cpp
krls_ex_SOURCES = krls_ex.cpp
krls_filter_ex_SOURCES = krls_filter_ex.cpp
krr_classification_ex_SOURCES = krr_classification_ex.cpp
krr_regression_ex_SOURCES = krr_regression_ex.cpp
least_squares_ex_SOURCES = least_squares_ex.cpp
linear_manifold_regularizer_ex_SOURCES = linear_manifold_regularizer_ex.cpp
logger_ex_SOURCES = logger_ex.cpp
logger_ex_2_SOURCES = logger_ex_2.cpp
matrix_ex_SOURCES = matrix_ex.cpp
matrix_expressions_ex_SOURCES = matrix_expressions_ex.cpp
member_function_pointer_ex_SOURCES = member_function_pointer_ex.cpp
mlp_ex_SOURCES = mlp_ex.cpp
model_selection_ex_SOURCES = model_selection_ex.cpp
multiclass_classification_ex_SOURCES = multiclass_classification_ex.cpp
multithreaded_object_ex_SOURCES = multithreaded_object_ex.cpp
object_detector_advanced_ex_SOURCES = object_detector_advanced_ex.cpp
object_detector_ex_SOURCES = object_detector_ex.cpp
one_class_classifiers_ex_SOURCES = one_class_classifiers_ex.cpp
optimization_ex_SOURCES = optimization_ex.cpp
parallel_for_ex_SOURCES = parallel_for_ex.cpp
pipe_ex_SOURCES = pipe_ex.cpp
pipe_ex_2_SOURCES = pipe_ex_2.cpp
quantum_computing_ex_SOURCES = quantum_computing_ex.cpp
queue_ex_SOURCES = queue_ex.cpp
rank_features_ex_SOURCES = rank_features_ex.cpp
running_stats_ex_SOURCES = running_stats_ex.cpp
rvm_ex_SOURCES = rvm_ex.cpp
rvm_regression_ex_SOURCES = rvm_regression_ex.cpp
sequence_labeler_ex_SOURCES = sequence_labeler_ex.cpp
sequence_segmenter_ex_SOURCES = sequence_segmenter_ex.cpp
server_http_ex_SOURCES = server_http_ex.cpp
server_iostream_ex_SOURCES = server_iostream_ex.cpp
sockets_ex_SOURCES = sockets_ex.cpp
sockstreambuf_ex_SOURCES = sockstreambuf_ex.cpp
std_allocator_ex_SOURCES = std_allocator_ex.cpp
surf_ex_SOURCES = surf_ex.cpp
svm_ex_SOURCES = svm_ex.cpp
svm_pegasos_ex_SOURCES = svm_pegasos_ex.cpp
svm_rank_ex_SOURCES = svm_rank_ex.cpp
svm_sparse_ex_SOURCES = svm_sparse_ex.cpp
svm_struct_ex_SOURCES = svm_struct_ex.cpp
svr_ex_SOURCES = svr_ex.cpp
threaded_object_ex_SOURCES = threaded_object_ex.cpp
thread_function_ex_SOURCES = thread_function_ex.cpp
thread_pool_ex_SOURCES = thread_pool_ex.cpp
threads_ex_SOURCES = threads_ex.cpp
timer_ex_SOURCES = timer_ex.cpp
train_object_detector_SOURCES = train_object_detector.cpp
using_custom_kernels_ex_SOURCES = using_custom_kernels_ex.cpp
xml_parser_ex_SOURCES = xml_parser_ex.cpp

