lib_LTLIBRARIES = libNGrams.la
libNGrams_la_SOURCES = NGram.h NGramRanker.h NGramRanker.cpp
libNGrams_la_LIBADD = ../Sentence/libSentence.la
libNGrams_la_CPPFLAGS = -I../Sentence -I../../../Tesseract/api \
-I../../../Tesseract/ccmain -I../../../Tesseract/ccstruct \
-I../../../Tesseract/ccutil -I../../../Tesseract/classify \
-I../../../Tesseract/config -I../../../Tesseract/contrib \
-I../../../Tesseract/cube -I../../../Tesseract/cutil \
-I../../../Tesseract/dict -I../../../Tesseract/doc \
-I../../../Tesseract/image -I../../../Tesseract/java \
-I../../../Tesseract/m4 -I../../../Tesseract/neural_networks \
-I../../../Tesseract/po -I../../../Tesseract/tessdata \
-I../../../Tesseract/testing -I../../../Tesseract/textord \
-I../../../Tesseract/training -I../../../Tesseract/viewer \
-I../../../Tesseract/wordrec -I../../../Tesseract \
-I../../../Utils
