lib_LTLIBRARIES = libgraph_utils.la
libgraph_utils_la_SOURCES = edge_list_graphs.h edge_list_graphs_abstract.h \
find_k_nearest_neighbors_lsh.h find_k_nearest_neighbors_lsh_abstract.h \
function_objects.h function_objects_abstract.h graph_utils.h \
graph_utils_abstract.h ordered_sample_pair.h ordered_sample_pair_abstract.h \
sample_pair.h sample_pair_abstract.h
