lib_LTLIBRARIES = libgui_core.la
libgui_core_la_SOURCES = gui_core_kernel_1.cpp gui_core_kernel_1.h \
gui_core_kernel_2.cpp gui_core_kernel_2.h gui_core_kernel_abstract.h \
windows.h xlib.h
libgui_core_CPPFLAGS = -I/usr/include
libgui_core_la_LIBADD = /usr/lib64/libX11.so /usr/lib64/libX11-xcb.so \
../threads/libthreads.la
