lib_LTLIBRARIES = libgui_widgets.la
libgui_widgets_la_SOURCES = base_widgets.cpp base_widgets.h \
base_widgets_abstract.h canvas_drawing.cpp canvas_drawing.h \
canvas_drawing_abstract.h drawable.cpp drawable.h drawable_abstract.h \
fonts.cpp fonts.h fonts_abstract.h nativefont.h style.cpp style.h \
style_abstract.h widgets.cpp widgets.h widgets_abstract.h
