lib_LTLIBRARIES = libimage_keypoint.la
libimage_keypoint_la_SOURCES = binned_vector_feature_image.h \
binned_vector_feature_image_abstract.h build_separable_poly_filters.h \
draw_surf_points.h draw_surf_points_abstract.h fine_hog_image.h \
fine_hog_image_abstract.h hashed_feature_image.h \
hashed_feature_image_abstract.h hessian_pyramid.h hessian_pyramid_abstract.h \
hog.h hog_abstract.h nearest_neighbor_feature_image.h \
nearest_neighbor_feature_image_abstract.h poly_image.h poly_image_abstract.h \
surf.h surf_abstract.h
