lib_LTLIBRARIES = libimage_transforms.la
libimage_transforms_la_SOURCES = assign_image.h assign_image_abstract.h \
colormaps.h colormaps_abstract.h draw.h draw_abstract.h edge_detector.h \
edge_detector_abstract.h equalize_histogram.h equalize_histogram_abstract.h \
image_pyramid.h image_pyramid_abstract.h integral_image.h \
integral_image_abstract.h interpolation.h interpolation_abstract.h \
label_connected_blobs.h label_connected_blobs_abstract.h \
morphological_operations.h morphological_operations_abstract.h \
segment_image.h segment_image_abstract.h spatial_filtering.h \
spatial_filtering_abstract.h thresholding.h thresholding_abstract.h
